Add opengraph meta

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <meta property="og:title" content="Quoteboard">
+    <meta property="og:description" content="IntelliTect's #quoteboard.">
+    <meta property="og:image" content="og_image.jpg">
+    <meta property="og:url" content="https://intellitect.github.io/Quoteboard/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:site_name" content="Quoteboard">
+    <meta name="twitter:image:alt" content='"Someone needs to do something with this. I am not sure what, but it needs a large font." -Kevin Bost'>
+
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <style>
         #messages-container>div {
